--- a/compose.yml
+++ b/compose.yml
@@ -12,6 +12,25 @@ services:
     ports:
       - "3306:3306"
 
+  api:
+    image: librarydevpy.azurecr.io/librarydevpy
+    build:
+      context: .
+      dockerfile: development/Dockerfiles/Dockerfile
+      target: release
+    ports:
+      - "8443:443"
+    environment:
+      R5_LOG: "DEBUG"
+      R5_DRIVER: "mysql+pymysql"
+      R5_DATABASE_HOSTNAME: "db"
+      R5_DATABASE_NAME: "r5"
+      R5_DATABASE_USER: "user"
+      R5_DATABASE_PASSWORD: "password"
+    entrypoint: ["r5", "start", "--inet", "0.0.0.0", "--port", "443"]
+    depends_on:
+      - db
+
 networks:
   default:
     name: r5
