Cambios para correr sin compose

--- a/development/Dockerfiles/Dockerfile
+++ b/development/Dockerfiles/Dockerfile
@@ -1,3 +1,4 @@
+# Etapa build
 FROM python:3.10-bullseye AS build
 
 WORKDIR /app
@@ -15,10 +16,23 @@ RUN make deps/install
 # Release
 # -------------------------------------------------------------------------------------------------------------------- #
 
-
 FROM build AS release
 
 COPY . /app
 RUN make project/install
 
-ENTRYPOINT ["r5","start","--inet","0.0.0.0","--port","443"]
+# Configurar las variables de entorno para la conexión a la base de datos
+ENV R5_DATABASE_HOSTNAME librarydevserver.mysql.database.azure.com
+ENV R5_DATABASE_NAME librarydev
+ENV R5_DATABASE_USER admin1
+ENV R5_DATABASE_PASSWORD Password1
+ENV R5_DATABASE_SSL-MODE require
+
+# Asegurarse de que pyodbc utilice los controladores de ODBC para SQL Server
+ENV ODBCINI=/app/development/odbc.ini
+ENV ODBCSYSINI=/app/development
+
+ENTRYPOINT ["r5","start","--inet","0.0.0.0","--port","80"]
+
+EXPOSE 80
+
