--- a/API_docs.yml
+++ b/API_docs.yml
@@ -1,6 +1,3 @@
-name: Swagger UI Action
-uses: Legion2/swagger-ui-action@v1.1.6
-
 openapi: 3.0.0
 info:
   title: API de Libros
@@ -176,6 +173,13 @@ paths:
 
 components:
   schemas:
+    
+    BookInfoWrapper:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/BookInfo'
+
     BookSource:
       type: string
       enum:
@@ -322,9 +326,3 @@ components:
           type: string
           format: email
           description: Correo electrónico del nuevo usuario registrado.
-
-securitySchemes:
-  x-token:
-    type: apiKey
-    in: header
-    name: x-token
